Java 11 compatibility. (#486)
Motivations:

We want to be able to build on Java 11.

Modifications:

- Add dependencies for classes removed from Java 11.
- Fix Java 11 compilation error with generics.
- Remove unsupported flag '-XX:+UseFastAccessorMethods`.
- Remove noisy flag '-XX:+PrintGCDetails'.
- Set compiler target compatibility to 1.8.
- Upgrade spotbugs to latest.
- Fix Javadoc that wasn't HTML5 compatible.
- Add spotbugs suppressions for https://github.com/spotbugs/spotbugs/issues/756
- Added build pipeline config for Java 11.

Results:

Builds successfully on Java 11.